# sfttoolbox

./: .gitignore  README.md  __init__.py  isochrone_map.html  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-tests.yml
notebooks/: derm_sankey_diagram.ipynb
sfttoolbox/: __init__.py  graphing.py  team_colours.py
sfttoolbox/.ipynb_checkpoints/: __init__-checkpoint.py
sfttoolbox/DES/: __init__.py  _des.py  _example1.py
sfttoolbox/DES/examples/: _example1.py  _example2.py  sample_graph.html
sfttoolbox/mapping/: __init__.py  isochrone_generator.py
sfttoolbox/mapping/.ipynb_checkpoints/: isochrone_generator-checkpoint.py
sfttoolbox/mapping/example/: example.py
sfttoolbox/mapping/examples/: __init__.py  example1.py  example2.py
sfttoolbox/mapping/examples/.ipynb_checkpoints/: __init__-checkpoint.py
sfttoolbox/mapping/tests/: test_isochrone_generator.py
sfttoolbox/plotting/: __init__.py  _plotting.py
test/DES/: test_des.py
test/mapping/: test_somerset_map.py
